--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using TasksEvaluation.Areas.Identity.Data
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,17 +13,32 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link href="~/css/footer.css" rel="stylesheet" />
+
 </head>
 <body>
     <button class="btn btn-secondary toggle-btn m-3" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
     <div class="sidebar">
         <div>
             <h3><a href="#" class="sidebar-header">TaskEvaluation</a></h3>
-            <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
-            <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
-            <a href="#" class="sidebar-link">Settings</a>
-            <a href="#" class="sidebar-link">Profile</a>
-            <a href="#" class="sidebar-link">Help</a>
+
+            @if (SignInManager.IsSignedIn(User))
+            {
+                <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
+                <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
+                <a href="#" class="sidebar-link">Solution</a>
+                <a href="#" class="sidebar-link">Profile</a>
+                <a href="#" class="sidebar-link">Help</a>
+            }
+            else
+            {
+           
+                <a href="#" class="sidebar-link">Help</a>
+                <a href="#" class="sidebar-link">LogIn As Student</a>
+
+            }
+
+
         </div>
         <div>
             <partial name="_LoginPartial" />
@@ -26,6 +47,8 @@
     <div class="content">
         <br /><br />
         @RenderBody()
+        <partial name="_FooterPartial" />
+
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -39,5 +62,6 @@
             });
         });
     </script>
+
 </body>
 </html>
