--- a/TasksEvaluation/wwwroot/css/site.css
+++ b/TasksEvaluation/wwwroot/css/site.css
@@ -25,7 +25,7 @@ body {
     width: 250px;
     position: fixed;
     height: 100%;
-    background: #f0f0f0;
+    background: #f8f8ff;
     color: black;
     transition: transform 0.3s ease;
     display: flex;
