--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -3,7 +3,6 @@
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,15 +12,15 @@
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-        <link href="~/css/footer.css" rel="stylesheet" />
-
+    <link href="~/css/footer.css" rel="stylesheet" />
 </head>
 <body>
-    <button class="btn btn-secondary toggle-btn m-3" id="sidebarToggle"><i class="fa-solid fa-bars"></i></button>
+    <button class="btn btn-secondary toggle-btn m-3 d-lg-none" id="sidebarToggle">
+        <i class="fa-solid fa-bars"></i>
+    </button>
     <div class="sidebar">
         <div>
-            <h3><a href="#" class="sidebar-header">TaskEvaluation</a></h3>
-
+            <h3><a href="#" class="sidebar-link">TaskEvaluation</a></h3>
             @if (SignInManager.IsSignedIn(User))
             {
                 <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
@@ -32,13 +31,9 @@
             }
             else
             {
-           
                 <a href="#" class="sidebar-link">Help</a>
                 <a href="#" class="sidebar-link">LogIn As Student</a>
-
             }
-
-
         </div>
         <div>
             <partial name="_LoginPartial" />
@@ -48,13 +43,11 @@
         <br /><br />
         @RenderBody()
         <partial name="_FooterPartial" />
-
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-
     <script>
         $(document).ready(function () {
             $('#sidebarToggle').on('click', function () {
@@ -62,6 +55,5 @@
             });
         });
     </script>
-
 </body>
 </html>
