--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     </button>
     <div class="sidebar">
         <div>
-            <h3><a href="#" class="sidebar-link">TaskEvaluation</a></h3>
+            <h4><a href="#" class="sidebar-link"><img src="~/img/logo.png" width="50" height="50" alt="Tasks Evaluation" /></a></h4>
             @if (SignInManager.IsSignedIn(User))
             {
                 <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
