--- a/TasksEvaluation/Views/Assignment/Create.cshtml
+++ b/TasksEvaluation/Views/Assignment/Create.cshtml
@@ -23,8 +23,16 @@
                             </div>
                         </div>
                     </div>
+                    @if (TempData["SuccessMessage"] != null)
+                    {
+                        <div class="alert alert-success" role="alert">
+                            @TempData["SuccessMessage"]
+                        </div>
+                    }
                     <form asp-action="Create" method="post">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="row gy-3 gy-md-4 overflow-hidden">
+                            @* Your form fields *@
                             <div class="col-12">
                                 <label asp-for="Title" class="form-label">Title <span class="text-danger">*</span></label>
                                 <input asp-for="Title" class="form-control" aria-required="true" placeholder="Title" />
@@ -47,6 +55,7 @@
                             </div>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
