--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -26,12 +26,12 @@
                 <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
                 <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
                 <a href="#" class="sidebar-link">Solution</a>
-                <a href="#" class="sidebar-link">Profile</a>
+                <a class="nav-link ml-3" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
                 <a href="#" class="sidebar-link">Help</a>
             }
             else
             {
-                <a href="#" class="sidebar-link">Help</a>
+                <a href="#" class="sidebar-link">About</a>
                 <a asp-controller="StudentSolution" asp-action="LogIn" class="sidebar-link">LogIn As Student</a>
             }
         </div>
@@ -44,7 +44,7 @@
         @RenderBody()
         <partial name="_FooterPartial" />
     </div>
-   <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
