--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -11,8 +11,12 @@
     <title>@ViewData["Title"] - TasksEvaluation</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link href="~/css/footer.css" rel="stylesheet" />
+
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <button class="btn btn-secondary toggle-btn m-3 d-lg-none" id="sidebarToggle">
@@ -26,8 +30,9 @@
                 <a asp-controller="Student" asp-action="Index" class="sidebar-link">Student</a>
                 <a asp-controller="Assignment" asp-action="Index" class="sidebar-link">Assignment</a>
                 <a asp-controller="Solution" asp-action="Index" class="sidebar-link">Solution</a>
+                <a asp-controller="Course" asp-action="Index" class="sidebar-link">Course</a>
                 <a class="sidebar-link" asp-area="" asp-controller="Account" asp-action="Register">Add Admin</a>
-                <a href="#" class="sidebar-link">Help</a>
+                <a href="#" class="sidebar-link">About</a>
             }
             else
             {
