--- a/TasksEvaluation/Views/Shared/_FooterPartial.cshtml
+++ b/TasksEvaluation/Views/Shared/_FooterPartial.cshtml
@@ -8,8 +8,8 @@
                 <div class="col-md-4 col-sm-4 col-xs-4">
                     <div class="footer-text pull-left">
                         <div class="d-flex">
-                            <h1 class="font-weight-bold mr-2 px-3" style="color:white; background-color:#957bda"> T </h1>
-                            <h1 style="color: #957bda">Devs</h1>
+                            <h1 class="font-weight-bold mr-2 px-3" style="color:white; background-color:#e0e0e0"> AL </h1>
+                            <h1 style="color: #e0e0e0">Devs</h1>
                         </div>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi non pariatur numquam animi nam at impedit odit nisi.</p>
                         <div class="social mt-2 mb-3">
@@ -54,7 +54,7 @@
             <div class="row" style="font-size:10px;">
                 <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="pull-left">
-                        <p><i class="fa fa-copyright"></i> 2020 thezpdesign</p>
+                        <p><i class="fa fa-copyright"></i> 2024 AlDevs</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-6">
