--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -36,8 +36,11 @@
             }
             else
             {
-                <a href="#" class="sidebar-link">About</a>
+                <a asp-controller="StudentSolution" asp-action="Index" class="sidebar-link">Assignments</a>
+                <a asp-controller="CourseStd" asp-action="Index" class="sidebar-link">Course</a>
                 <a asp-controller="StudentSolution" asp-action="LogIn" class="sidebar-link">LogIn As Student</a>
+                <a href="#" class="sidebar-link">About</a>
+
             }
         </div>
         <div>
