--- a/TasksEvaluation/Views/Shared/_Layout.cshtml
+++ b/TasksEvaluation/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
             else
             {
                 <a asp-controller="StudentSolution" asp-action="Index" class="sidebar-link">Assignments</a>
+                <a asp-controller="EvaluatedAssignment" asp-action="Index" class="sidebar-link">Evaluated Assignments</a>
                 <a asp-controller="CourseStd" asp-action="Index" class="sidebar-link">Course</a>
                 <a asp-controller="StudentSolution" asp-action="LogIn" class="sidebar-link">LogIn As Student</a>
                 <a href="#" class="sidebar-link">About</a>
