--- a/TasksEvaluation/Views/Student/Edit.cshtml
+++ b/TasksEvaluation/Views/Student/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit Student";
+    var groups = ViewBag.Groups as IEnumerable<Microsoft.AspNetCore.Mvc.Rendering.SelectListItem> ?? new List<SelectListItem>();
 }
 
 <section class="p-3 p-md-4 p-xl-5">
@@ -9,7 +10,6 @@
         <div class="row">
             <div class="col-12 col-md-6 bsb-tpl-bg-platinum">
                 <div class="d-flex flex-column justify-content-between h-100 p-3 p-md-4 p-xl-5">
-
                     <img class="img-fluid rounded mx-auto" loading="lazy" src="~/img/logo.png" width="100%" height="20%" alt="Logo">
                     <p class="mb-0">Already have an account? <a asp-action="Index" class="link-secondary text-decoration-none">Back to List</a></p>
                 </div>
@@ -47,8 +47,10 @@
                                 <span asp-validation-for="ProfilePic" class="text-danger"></span>
                             </div>
                             <div class="col-12">
-                                <label asp-for="GroupId" class="form-label">Group ID <span class="text-danger">*</span></label>
-                                <input asp-for="GroupId" class="form-control" aria-required="true" placeholder="Group ID" />
+                                <label asp-for="GroupId" class="form-label">Group <span class="text-danger">*</span></label>
+                                <select asp-for="GroupId" class="form-select" asp-items="groups">
+                                    <option value="" disabled>Select Group</option>
+                                </select>
                                 <span asp-validation-for="GroupId" class="text-danger"></span>
                             </div>
                             <div class="col-12">
