--- a/TasksEvaluation/Views/Assignment/Edit.cshtml
+++ b/TasksEvaluation/Views/Assignment/Edit.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Edit Assignment";
+    var groups = ViewBag.Groups as IEnumerable<Microsoft.AspNetCore.Mvc.Rendering.SelectListItem> ?? new List<SelectListItem>();
+
 }
 
 <section class="p-3 p-md-4 p-xl-5">
@@ -41,8 +43,10 @@
                                 <span asp-validation-for="DeadLine" class="text-danger"></span>
                             </div>
                             <div class="col-12">
-                                <label asp-for="GroupId" class="form-label">Group ID</label>
-                                <input asp-for="GroupId" class="form-control" placeholder="Group ID" />
+                                <label asp-for="GroupId" class="form-label">Group <span class="text-danger">*</span></label>
+                                <select asp-for="GroupId" class="form-select" asp-items="groups">
+                                    <option value="" disabled >Select Group</option>
+                                </select>
                                 <span asp-validation-for="GroupId" class="text-danger"></span>
                             </div>
 
