--- a/TasksEvaluation/Views/StudentSolution/UploadSolution.cshtml
+++ b/TasksEvaluation/Views/StudentSolution/UploadSolution.cshtml
@@ -9,12 +9,12 @@
 <form asp-action="UploadSolution" asp-controller="StudentSolution" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label asp-for="SolutionFile" class="control-label"></label>
-        <input asp-for="SolutionFile" class="form-control" type="file" />
+        <input asp-for="SolutionFile" class="form-control" type="file" required />
         <span asp-validation-for="SolutionFile" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for="Notes" class="control-label"></label>
-        <input asp-for="Notes" class="form-control" />
+        <input asp-for="Notes" class="form-control" required />
         <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
     <input type="hidden" asp-for="AssignmentId" />
